<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>edu_virtual_joy</name>
  <version>1.0.0</version>
  <description>This package comprises a ROS joy interface for a keyboard steering concept.</description>
  <maintainer email="stefan.may@eduart-robotik.com">Stefan May</maintainer>
  <maintainer email="christian.wendt@eduart-robotik.com">Christian Wendt</maintainer>
  <license>BSD-3-Clause</license>

  <depend>sensor_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
